--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.2.14",
+    "@angular/cdk": "^18.2.14",
     "@angular/common": "^18.2.14",
     "@angular/compiler": "^18.2.14",
     "@angular/core": "^18.2.14",
     "@angular/forms": "^18.2.14",
+    "@angular/material": "^18.2.14",
     "@angular/platform-browser": "^18.2.14",
     "@angular/platform-browser-dynamic": "^18.2.14",
     "@angular/router": "^18.2.14",
@@ -25,23 +27,23 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.2.21",
-    "@angular/cli": "^18.2.21",
-    "@angular/compiler-cli": "^18.2.14",
     "@angular-eslint/builder": "^18.3.0",
     "@angular-eslint/schematics": "^18.3.0",
-    "@types/node": "^20.10.5",
-    "@types/jasmine": "~5.1.0",
+    "@angular/cli": "^18.2.21",
+    "@angular/compiler-cli": "^18.2.14",
+    "@eslint/js": "^9.14.0",
     "@playwright/test": "^1.48.2",
+    "@types/jasmine": "~5.1.0",
+    "@types/node": "^20.10.5",
     "angular-eslint": "^18.3.0",
     "eslint": "^9.14.0",
-    "@eslint/js": "^9.14.0",
-    "typescript-eslint": "^8.12.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^2.0.0",
-    "typescript": "~5.4.5"
+    "typescript": "~5.4.5",
+    "typescript-eslint": "^8.12.0"
   }
 }
