feat(auth): implement authentication system with rate limiting and error monitoring
Add comprehensive auth system including:
- Login/register flows with form validation
- JWT authentication with guards
- Rate limiting for auth endpoints
- Sentry error monitoring
- API request sanitization
- Environment configuration
- User profile management
- Protected routes
- Error handling
- Security headers

--- a/.env.example
+++ b/.env.example
@@ -16,5 +16,16 @@ JWT_EXPIRES_IN=7d
 PORT=3000
 CORS_ORIGIN=http://localhost:4200
 
+# Rate Limiting (requests per time window)
+THROTTLE_SHORT_LIMIT=10    # per 1 second
+THROTTLE_MEDIUM_LIMIT=50   # per 10 seconds
+THROTTLE_LONG_LIMIT=100    # per 1 minute
+
+# Security (for production)
+# BCRYPT_ROUNDS=12
+
+# Error Monitoring (optional)
+# SENTRY_DSN=your-sentry-dsn
+
 # Frontend Configuration
 VITE_API_URL=http://localhost:3000/api
