--- a/package.json
+++ b/package.json
@@ -37,11 +37,15 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/swagger": "^7.2.0",
+    "@nestjs/throttler": "^5.2.0",
     "@nestjs/typeorm": "^10.0.1",
+    "@sentry/browser": "^8.55.0",
+    "@sentry/node": "^8.55.0",
     "ajv": "^8.17.1",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "helmet": "^7.1.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
