--- a/package.json
+++ b/package.json
@@ -80,7 +80,9 @@
     "@types/node": "^20.10.5",
     "@types/passport-jwt": "^4.0.0",
     "@types/passport-local": "^1.0.38",
+    "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.7",
+    "supertest": "^6.3.3",
     "angular-eslint": "^18.3.0",
     "eslint": "^9.14.0",
     "jasmine-core": "~5.1.0",
