feat(docker): migrate from nginx to caddy and improve docker setup
- Replace nginx with caddy for better performance and simpler configuration
- Add docker-compose.dev.yml for local development
- Add health checks to containers
- Include docker scripts in package.json
- Update .env.example with docker configuration notes

--- a/.env.example
+++ b/.env.example
@@ -29,3 +29,7 @@ THROTTLE_LONG_LIMIT=100    # per 1 minute
 
 # Frontend Configuration
 VITE_API_URL=http://localhost:3000/api
+
+# Docker/Production Configuration
+# For docker-compose, DB_HOST should be 'postgres' (service name)
+# DOMAIN=your-domain.com
