--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -7,7 +7,7 @@ WORKDIR /app
 COPY package*.json ./
 
 # Install dependencies
-RUN npm ci
+RUN npm ci --legacy-peer-deps
 
 # Copy source code
 COPY . .
@@ -15,15 +15,19 @@ COPY . .
 # Build the web app
 RUN npx nx build web --configuration=production
 
-# Production stage - using nginx
-FROM nginx:alpine AS runner
+# Production stage - using Caddy
+FROM caddy:2-alpine AS runner
 
-# Copy custom nginx config
-COPY apps/web/nginx.conf /etc/nginx/nginx.conf
+# Copy Caddyfile for static serving
+COPY apps/web/Caddyfile /etc/caddy/Caddyfile
 
 # Copy built application
-COPY --from=builder /app/dist/apps/web/browser /usr/share/nginx/html
+COPY --from=builder /app/dist/apps/web/browser /srv
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+    CMD wget --quiet --tries=1 --spider http://localhost/health || exit 1
 
 EXPOSE 80
 
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["caddy", "run", "--config", "/etc/caddy/Caddyfile"]
