feat(auth): enhance login and register UI with modern styling and validation
- Redesign auth pages with split-panel layout and improved visual elements
- Add password strength indicators and validation requirements
- Implement focus states and better error handling for form fields
- Update form layouts with material checkbox components
- Add remember me and terms agreement options

--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -44,4 +44,4 @@ ENV NODE_ENV=production
 
 # Use dumb-init to handle signals properly
 ENTRYPOINT ["dumb-init", "--"]
-CMD ["node", "dist/main.js"]
+CMD ["node", "dist/src/main.js"]
