--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
 DB_NAME=angular_surveys
+DB_SYNCHRONIZE=true  # Set to false in production after initial setup
 
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
