--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,11 +6,9 @@ on:
   pull_request:
     branches: [main, master]
 
-env:
-  NX_CLOUD_ACCESS_TOKEN: ${{ secrets.NX_CLOUD_ACCESS_TOKEN }}
-
 jobs:
-  main:
+  build:
+    name: Build & Test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -19,8 +17,8 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
+          node-version: "20"
+          cache: "npm"
 
       - name: Install dependencies
         run: npm ci
@@ -28,18 +26,19 @@ jobs:
       - name: Derive SHAs for affected commands
         uses: nrwl/nx-set-shas@v4
 
-      - name: Lint affected projects
+      - name: Lint
         run: npx nx affected --target=lint --parallel=3
 
-      - name: Test affected projects
+      - name: Unit Tests
         run: npx nx affected --target=test --parallel=3 --configuration=ci
 
-      - name: Build affected projects
+      - name: Build
         run: npx nx affected --target=build --parallel=3
 
   e2e:
+    name: E2E Tests
     runs-on: ubuntu-latest
-    needs: main
+    needs: build
     steps:
       - uses: actions/checkout@v4
         with:
@@ -47,8 +46,8 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
+          node-version: "20"
+          cache: "npm"
 
       - name: Install dependencies
         run: npm ci
@@ -58,38 +57,3 @@ jobs:
 
       - name: Run E2E tests
         run: npm run e2e
-
-  deploy-preview:
-    runs-on: ubuntu-latest
-    needs: main
-    if: github.event_name == 'pull_request'
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-
-      - run: npm ci
-      - run: npx nx build web --configuration=production
-
-      # Add deployment preview steps here (e.g., Vercel, Netlify)
-
-  deploy-production:
-    runs-on: ubuntu-latest
-    needs: [main, e2e]
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-
-      - run: npm ci
-      - run: npx nx build web --configuration=production
-      - run: npx nx build api --configuration=production
-
-      # Add production deployment steps here
