--- a/apps/web/project.json
+++ b/apps/web/project.json
@@ -2,20 +2,27 @@
   "name": "web",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
-  "prefix": "app",
+  "generators": {
+    "@schematics/angular:component": {
+      "style": "scss"
+    }
+  },
   "sourceRoot": "apps/web/src",
-  "tags": ["type:app", "scope:web"],
+  "prefix": "app",
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:application",
-      "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/apps/web",
         "index": "apps/web/src/index.html",
-        "browser": "apps/web/src/main.ts",
-        "polyfills": ["apps/web/src/polyfills.ts"],
+        "polyfills": [
+          "apps/web/src/polyfills.ts"
+        ],
         "tsConfig": "apps/web/tsconfig.app.json",
-        "assets": ["apps/web/src/favicon.ico", "apps/web/src/assets"],
+        "assets": [
+          "apps/web/src/favicon.ico",
+          "apps/web/src/assets"
+        ],
         "styles": [
           "@angular/material/prebuilt-themes/azure-blue.css",
           "apps/web/src/styles.scss"
@@ -24,10 +31,22 @@
         "extractLicenses": false,
         "sourceMap": true,
         "optimization": false,
-        "namedChunks": true
+        "namedChunks": true,
+        "browser": "apps/web/src/main.ts"
       },
       "configurations": {
         "production": {
+          "fileReplacements": [
+            {
+              "replace": "apps/web/src/environments/environment.ts",
+              "with": "apps/web/src/environments/environment.prod.ts"
+            }
+          ],
+          "optimization": true,
+          "outputHashing": "all",
+          "sourceMap": false,
+          "namedChunks": false,
+          "extractLicenses": true,
           "budgets": [
             {
               "type": "initial",
@@ -36,21 +55,10 @@
             },
             {
               "type": "anyComponentStyle",
-              "maximumWarning": "12kb",
-              "maximumError": "16kb"
+              "maximumWarning": "6kb",
+              "maximumError": "10kb"
             }
-          ],
-          "fileReplacements": [
-            {
-              "replace": "apps/web/src/environments/environment.ts",
-              "with": "apps/web/src/environments/environment.prod.ts"
-            }
-          ],
-          "outputHashing": "all",
-          "optimization": true,
-          "sourceMap": false,
-          "namedChunks": false,
-          "extractLicenses": true
+          ]
         },
         "development": {
           "optimization": false,
@@ -70,7 +78,14 @@
           "buildTarget": "web:build:development"
         }
       },
-      "defaultConfiguration": "development"
+      "defaultConfiguration": "development",
+      "continuous": true
+    },
+    "extract-i18n": {
+      "executor": "@angular-devkit/build-angular:extract-i18n",
+      "options": {
+        "buildTarget": "web:build"
+      }
     },
     "test": {
       "executor": "@angular-devkit/build-angular:karma",
@@ -79,7 +94,10 @@
         "polyfills": "apps/web/src/polyfills.ts",
         "tsConfig": "apps/web/tsconfig.spec.json",
         "karmaConfig": "apps/web/karma.conf.js",
-        "assets": ["apps/web/src/favicon.ico", "apps/web/src/assets"],
+        "assets": [
+          "apps/web/src/favicon.ico",
+          "apps/web/src/assets"
+        ],
         "styles": [
           "@angular/material/prebuilt-themes/azure-blue.css",
           "apps/web/src/styles.scss"
@@ -90,13 +108,10 @@
     "lint": {
       "executor": "@angular-eslint/builder:lint",
       "options": {
-        "lintFilePatterns": ["apps/web/src/**/*.ts", "apps/web/src/**/*.html"]
-      }
-    },
-    "e2e": {
-      "executor": "nx:run-commands",
-      "options": {
-        "command": "playwright test -c apps/web/e2e/playwright.config.ts"
+        "lintFilePatterns": [
+          "apps/web/src/**/*.ts",
+          "apps/web/src/**/*.html"
+        ]
       }
     }
   }
