--- a/libs/shared-types/project.json
+++ b/libs/shared-types/project.json
@@ -3,11 +3,16 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "library",
   "sourceRoot": "libs/shared-types/src",
-  "tags": ["type:lib", "scope:shared"],
+  "tags": [
+    "type:lib",
+    "scope:shared"
+  ],
   "targets": {
     "build": {
       "executor": "@nx/js:tsc",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/libs/shared-types",
         "main": "libs/shared-types/src/index.ts",
@@ -18,12 +23,16 @@
     "lint": {
       "executor": "@nx/eslint:lint",
       "options": {
-        "lintFilePatterns": ["libs/shared-types/**/*.ts"]
+        "lintFilePatterns": [
+          "libs/shared-types/**/*.ts"
+        ]
       }
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
       "options": {
         "jestConfig": "libs/shared-types/jest.config.ts",
         "passWithNoTests": true
