--- a/package.json
+++ b/package.json
@@ -27,16 +27,16 @@
     "docker:clean": "docker compose down -v --rmi local"
   },
   "dependencies": {
-    "@angular/animations": "^19.2.0",
-    "@angular/cdk": "^19.2.0",
-    "@angular/common": "^19.2.0",
-    "@angular/compiler": "^19.2.0",
-    "@angular/core": "^19.2.0",
-    "@angular/forms": "^19.2.0",
-    "@angular/material": "^19.2.0",
-    "@angular/platform-browser": "^19.2.0",
-    "@angular/platform-browser-dynamic": "^19.2.0",
-    "@angular/router": "^19.2.0",
+    "@angular/animations": "20.3.9",
+    "@angular/cdk": "20.2.9",
+    "@angular/common": "20.3.9",
+    "@angular/compiler": "20.3.9",
+    "@angular/core": "20.3.9",
+    "@angular/forms": "20.3.9",
+    "@angular/material": "20.2.9",
+    "@angular/platform-browser": "20.3.9",
+    "@angular/platform-browser-dynamic": "20.3.9",
+    "@angular/router": "20.3.9",
     "@nestjs/common": "^10.4.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.0",
@@ -65,21 +65,21 @@
     "zone.js": "^0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.0",
-    "@angular-eslint/builder": "^19.0.0",
-    "@angular-eslint/schematics": "^19.0.0",
-    "@angular/cli": "^19.2.0",
-    "@angular/compiler-cli": "^19.2.0",
+    "@angular-devkit/build-angular": "20.3.9",
+    "@angular-eslint/builder": "20.7.0",
+    "@angular-eslint/schematics": "20.7.0",
+    "@angular/cli": "20.3.9",
+    "@angular/compiler-cli": "20.3.9",
     "@eslint/js": "^9.14.0",
     "@nestjs/schematics": "^10.2.0",
     "@nestjs/testing": "^10.4.0",
-    "@nx/angular": "^20.4.0",
-    "@nx/eslint": "^20.4.0",
-    "@nx/eslint-plugin": "^20.4.0",
-    "@nx/jest": "^20.4.0",
-    "@nx/js": "^20.4.0",
-    "@nx/node": "^20.4.0",
-    "@nx/workspace": "^20.4.0",
+    "@nx/angular": "22.2.0",
+    "@nx/eslint": "22.2.0",
+    "@nx/eslint-plugin": "22.2.0",
+    "@nx/jest": "22.2.0",
+    "@nx/js": "22.2.0",
+    "@nx/node": "22.2.0",
+    "@nx/workspace": "22.2.0",
     "@playwright/test": "^1.49.0",
     "@types/bcrypt": "^5.0.2",
     "@types/jasmine": "~5.1.0",
@@ -90,8 +90,8 @@
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
     "supertest": "^7.0.0",
-    "angular-eslint": "^19.0.0",
-    "eslint": "^9.14.0",
+    "angular-eslint": "20.7.0",
+    "eslint": "^9.28.0",
     "jasmine-core": "~5.4.0",
     "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
@@ -100,10 +100,10 @@
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
-    "nx": "^20.4.0",
-    "ts-jest": "^29.2.0",
+    "nx": "22.2.0",
+    "ts-jest": "29.4.6",
     "ts-node": "^10.9.2",
-    "typescript": "~5.6.0",
-    "typescript-eslint": "^8.18.0"
+    "typescript": "~5.9.3",
+    "typescript-eslint": "^8.33.1"
   }
 }
