--- a/package.json
+++ b/package.json
@@ -27,16 +27,16 @@
     "docker:clean": "docker compose down -v --rmi local"
   },
   "dependencies": {
-    "@angular/animations": "20.3.9",
+    "@angular/animations": "21.0.4",
     "@angular/cdk": "20.2.9",
-    "@angular/common": "20.3.9",
-    "@angular/compiler": "20.3.9",
-    "@angular/core": "20.3.9",
-    "@angular/forms": "20.3.9",
+    "@angular/common": "21.0.4",
+    "@angular/compiler": "21.0.4",
+    "@angular/core": "21.0.4",
+    "@angular/forms": "21.0.4",
     "@angular/material": "20.2.9",
-    "@angular/platform-browser": "20.3.9",
-    "@angular/platform-browser-dynamic": "20.3.9",
-    "@angular/router": "20.3.9",
+    "@angular/platform-browser": "21.0.4",
+    "@angular/platform-browser-dynamic": "21.0.4",
+    "@angular/router": "21.0.4",
     "@nestjs/common": "^10.4.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.0",
@@ -65,11 +65,11 @@
     "zone.js": "^0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "20.3.9",
     "@angular-eslint/builder": "20.7.0",
     "@angular-eslint/schematics": "20.7.0",
-    "@angular/cli": "20.3.9",
-    "@angular/compiler-cli": "20.3.9",
+    "@angular/build": "^21.0.3",
+    "@angular/cli": "21.0.3",
+    "@angular/compiler-cli": "21.0.4",
     "@eslint/js": "^9.14.0",
     "@nestjs/schematics": "^10.2.0",
     "@nestjs/testing": "^10.4.0",
@@ -89,11 +89,10 @@
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
-    "supertest": "^7.0.0",
     "angular-eslint": "20.7.0",
     "eslint": "^9.28.0",
     "jasmine-core": "~5.4.0",
-    "jest": "^29.7.0",
+    "jest": "^30.2.0",
     "jest-environment-node": "^29.7.0",
     "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
@@ -101,6 +100,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
     "nx": "22.2.0",
+    "supertest": "^7.0.0",
     "ts-jest": "29.4.6",
     "ts-node": "^10.9.2",
     "typescript": "~5.9.3",
