--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "compileOnSave": false,
   "compilerOptions": {
     "outDir": "./dist/out-tsc",
+    "moduleResolution": "bundler",
     "esModuleInterop": true,
     "useDefineForClassFields": false
   },
