--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
   },
   "dependencies": {
     "@angular/animations": "21.0.4",
-    "@angular/cdk": "20.2.9",
+    "@angular/cdk": "21.0.3",
     "@angular/common": "21.0.4",
     "@angular/compiler": "21.0.4",
     "@angular/core": "21.0.4",
     "@angular/forms": "21.0.4",
-    "@angular/material": "20.2.9",
+    "@angular/material": "21.0.3",
     "@angular/platform-browser": "21.0.4",
     "@angular/platform-browser-dynamic": "21.0.4",
     "@angular/router": "21.0.4",
@@ -58,15 +58,17 @@
     "passport-local": "^1.0.0",
     "pg": "^8.13.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1",
+    "rxjs": "^7.8.2",
     "tslib": "^2.8.0",
     "typeorm": "^0.3.20",
     "uuid": "^11.0.0",
-    "zone.js": "^0.15.0"
+    "zone.js": "^0.16.0"
   },
   "devDependencies": {
-    "@angular-eslint/builder": "20.7.0",
-    "@angular-eslint/schematics": "20.7.0",
+    "@angular-devkit/core": "17.3.10",
+    "@angular-devkit/architect": "0.1703.10",
+    "@angular-eslint/builder": "21.1.0",
+    "@angular-eslint/schematics": "21.1.0",
     "@angular/build": "^21.0.3",
     "@angular/cli": "21.0.3",
     "@angular/compiler-cli": "21.0.4",
@@ -89,7 +91,7 @@
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
-    "angular-eslint": "20.7.0",
+    "angular-eslint": "21.1.0",
     "eslint": "^9.28.0",
     "jasmine-core": "~5.4.0",
     "jest": "^30.2.0",
