--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-surveys",
+  "name": "@henryohanga/angular-surveys",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -37,44 +37,44 @@
     "@angular/platform-browser": "21.0.4",
     "@angular/platform-browser-dynamic": "21.0.4",
     "@angular/router": "21.0.4",
-    "@nestjs/common": "^10.4.0",
-    "@nestjs/config": "^3.3.0",
-    "@nestjs/core": "^10.4.0",
-    "@nestjs/jwt": "^10.2.0",
-    "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.4.0",
-    "@nestjs/swagger": "^8.1.0",
-    "@nestjs/throttler": "^6.3.0",
-    "@nestjs/typeorm": "^10.0.2",
-    "@sentry/browser": "^8.55.0",
-    "@sentry/node": "^8.55.0",
+    "@nestjs/common": "^11.1.9",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/core": "^11.1.9",
+    "@nestjs/jwt": "^11.0.2",
+    "@nestjs/passport": "^11.0.5",
+    "@nestjs/platform-express": "^11.1.9",
+    "@nestjs/swagger": "^11.2.3",
+    "@nestjs/throttler": "^6.5.0",
+    "@nestjs/typeorm": "^11.0.0",
+    "@sentry/browser": "^10.30.0",
+    "@sentry/node": "^10.30.0",
     "ajv": "^8.17.1",
-    "bcrypt": "^5.1.1",
+    "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
-    "helmet": "^8.0.0",
+    "class-validator": "^0.14.3",
+    "helmet": "^8.1.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "pg": "^8.13.0",
+    "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
-    "tslib": "^2.8.0",
-    "typeorm": "^0.3.20",
-    "uuid": "^11.0.0",
+    "tslib": "^2.8.1",
+    "typeorm": "^0.3.28",
+    "uuid": "^9.0.0",
     "zone.js": "^0.16.0"
   },
   "devDependencies": {
-    "@angular-devkit/core": "17.3.10",
-    "@angular-devkit/architect": "0.1703.10",
+    "@angular-devkit/core": "20.3.13",
+    "@angular-devkit/architect": "0.2003.13",
     "@angular-eslint/builder": "21.1.0",
     "@angular-eslint/schematics": "21.1.0",
     "@angular/build": "^21.0.3",
     "@angular/cli": "21.0.3",
     "@angular/compiler-cli": "21.0.4",
-    "@eslint/js": "^9.14.0",
-    "@nestjs/schematics": "^10.2.0",
-    "@nestjs/testing": "^10.4.0",
+    "@eslint/js": "^9.39.1",
+    "@nestjs/schematics": "^11.0.9",
+    "@nestjs/testing": "^11.1.9",
     "@nx/angular": "22.2.0",
     "@nx/eslint": "22.2.0",
     "@nx/eslint-plugin": "22.2.0",
@@ -82,19 +82,18 @@
     "@nx/js": "22.2.0",
     "@nx/node": "22.2.0",
     "@nx/workspace": "22.2.0",
-    "@playwright/test": "^1.49.0",
-    "@types/bcrypt": "^5.0.2",
-    "@types/jasmine": "~5.1.0",
+    "@playwright/test": "^1.57.0",
+    "@types/bcrypt": "^6.0.0",
+    "@types/jasmine": "~5.1.13",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.10.0",
+    "@types/node": "^25.0.0",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
-    "@types/supertest": "^6.0.2",
-    "@types/uuid": "^10.0.0",
+    "@types/supertest": "^6.0.3",
     "angular-eslint": "21.1.0",
-    "eslint": "^9.28.0",
-    "jasmine-core": "~5.4.0",
-    "jest": "^30.2.0",
+    "eslint": "^9.39.1",
+    "jasmine-core": "~5.13.0",
+    "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
@@ -102,10 +101,10 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
     "nx": "22.2.0",
-    "supertest": "^7.0.0",
+    "supertest": "^7.1.4",
     "ts-jest": "29.4.6",
     "ts-node": "^10.9.2",
     "typescript": "~5.9.3",
-    "typescript-eslint": "^8.33.1"
+    "typescript-eslint": "^8.49.0"
   }
 }
