--- a/apps/web/project.json
+++ b/apps/web/project.json
@@ -15,14 +15,9 @@
       "options": {
         "outputPath": "dist/apps/web",
         "index": "apps/web/src/index.html",
-        "polyfills": [
-          "apps/web/src/polyfills.ts"
-        ],
+        "polyfills": ["apps/web/src/polyfills.ts"],
         "tsConfig": "apps/web/tsconfig.app.json",
-        "assets": [
-          "apps/web/src/favicon.ico",
-          "apps/web/src/assets"
-        ],
+        "assets": ["apps/web/src/favicon.ico", "apps/web/src/assets"],
         "styles": [
           "@angular/material/prebuilt-themes/indigo-pink.css",
           "apps/web/src/styles.scss"
@@ -55,8 +50,8 @@
             },
             {
               "type": "anyComponentStyle",
-              "maximumWarning": "6kb",
-              "maximumError": "10kb"
+              "maximumWarning": "10kb",
+              "maximumError": "20kb"
             }
           ]
         },
@@ -91,15 +86,10 @@
       "executor": "@angular/build:karma",
       "options": {
         "main": "apps/web/src/test.ts",
-        "polyfills": [
-          "apps/web/src/polyfills.ts"
-        ],
+        "polyfills": ["apps/web/src/polyfills.ts"],
         "tsConfig": "apps/web/tsconfig.spec.json",
         "karmaConfig": "apps/web/karma.conf.js",
-        "assets": [
-          "apps/web/src/favicon.ico",
-          "apps/web/src/assets"
-        ],
+        "assets": ["apps/web/src/favicon.ico", "apps/web/src/assets"],
         "styles": [
           "@angular/material/prebuilt-themes/indigo-pink.css",
           "apps/web/src/styles.scss"
@@ -111,10 +101,7 @@
     "lint": {
       "executor": "@angular-eslint/builder:lint",
       "options": {
-        "lintFilePatterns": [
-          "apps/web/src/**/*.ts",
-          "apps/web/src/**/*.html"
-        ]
+        "lintFilePatterns": ["apps/web/src/**/*.ts", "apps/web/src/**/*.html"]
       }
     }
   }
