feat(e2e): update e2e tests and config for new nx playwright setup
- Add nxE2EPreset to playwright config
- Update test specs to match new UI and routing
- Add project.json for e2e configuration
- Update package.json scripts and dependencies

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test:api": "nx test api",
     "test:all": "nx run-many --target=test --all",
     "lint": "nx run-many --target=lint --all",
-    "e2e": "nx e2e web",
+    "e2e": "nx e2e web-e2e",
     "graph": "nx graph",
     "affected:build": "nx affected --target=build",
     "affected:test": "nx affected --target=test",
@@ -82,6 +82,7 @@
     "@nx/jest": "22.2.0",
     "@nx/js": "22.2.0",
     "@nx/node": "22.2.0",
+    "@nx/playwright": "22.2.0",
     "@nx/workspace": "22.2.0",
     "@playwright/test": "^1.57.0",
     "@types/bcrypt": "^6.0.0",
