feat(uploads): implement file upload service with AWS S3 integration
Add new uploads module with service, controller, and DTO for handling file uploads
Integrate with AWS S3 for storage and CloudFront for CDN distribution
Add frontend file upload component with progress tracking and error handling
Update documentation with configuration and usage details

--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,23 @@ THROTTLE_LONG_LIMIT=100    # per 1 minute
 # Frontend Configuration
 VITE_API_URL=http://localhost:3000/api
 
+# File Uploads / Media
+# AWS region for S3
+AWS_REGION=us-east-1
+
+# S3 bucket for media uploads
+AWS_S3_BUCKET=angular-surveys-uploads
+
+# Optional: CloudFront distribution domain for serving uploaded files
+# Example: d1234567890abcdef.cloudfront.net
+AWS_CLOUDFRONT_DOMAIN=
+
+# Max file size in MB for uploads
+MAX_FILE_SIZE_MB=10
+
+# Allowed mime types (comma-separated). Supports wildcards like image/*
+ALLOWED_MIME_TYPES=image/*,application/pdf,video/*,audio/*
+
 # Docker/Production Configuration
 # For docker-compose, DB_HOST should be 'postgres' (service name)
 # DOMAIN=your-domain.com
