--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@angular/platform-browser": "21.0.4",
     "@angular/platform-browser-dynamic": "21.0.4",
     "@angular/router": "21.0.4",
+    "@aws-sdk/client-s3": "^3.700.0",
+    "@aws-sdk/s3-request-presigner": "^3.700.0",
     "@nestjs/common": "^11.1.9",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.9",
@@ -88,6 +90,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/jasmine": "~5.1.13",
     "@types/jest": "^29.5.14",
+    "@types/multer": "^1.4.12",
     "@types/node": "^25.0.0",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
