feat(premium-flow): add premium question-by-question answering flow
Add support for premium question-by-question answering flow feature
- Create premium-flow-interface library with service and types
- Add answeringFlow setting to survey configuration
- Implement UI controls for selecting answering flow
- Add premium flow detection and fallback to continuous flow
- Document premium submodule setup and integration

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,10 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@angular-surveys/shared-types": ["libs/shared-types/src/index.ts"]
+      "@angular-surveys/shared-types": ["libs/shared-types/src/index.ts"],
+      "@angular-surveys/premium-flow-interface": [
+        "libs/premium-flow-interface/src/index.ts"
+      ]
     }
   },
   "exclude": ["node_modules", "tmp"]
