feat: add premium-flow-interface library and update dependencies
Add new premium-flow-interface library with initial configuration
Update tsconfig files to include new library paths
Update package.json scripts and dependencies

--- a/apps/web/tsconfig.app.json
+++ b/apps/web/tsconfig.app.json
@@ -3,17 +3,17 @@
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "types": [],
-    "moduleResolution": "bundler"
+    "moduleResolution": "bundler",
+    "baseUrl": ".",
+    "paths": {
+      "@angular-surveys/shared-types": ["../../libs/shared-types/src/index.ts"],
+      "@angular-surveys/premium-flow-interface": [
+        "../../libs/premium-flow-interface/src/index.ts"
+      ],
+      "@angular-surveys/premium-flow": ["../../apps/premium-flow/src/index.ts"]
+    }
   },
-  "files": [
-    "src/main.ts",
-    "src/polyfills.ts"
-  ],
-  "include": [
-    "src/**/*.d.ts"
-  ],
-  "exclude": [
-    "src/**/*.spec.ts",
-    "src/test.ts"
-  ]
+  "files": ["src/main.ts", "src/polyfills.ts"],
+  "include": ["src/**/*.d.ts"],
+  "exclude": ["src/**/*.spec.ts", "src/test.ts"]
 }
