--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "start:all": "nx run-many --target=serve --projects=web,api --parallel",
     "build": "nx build web",
     "build:api": "nx build api",
-    "build:all": "nx run-many --target=build --all",
+    "build:all": "nx run-many --target=build --projects=web,api,premium-flow-interface,shared-types",
     "test": "nx test web",
     "test:api": "nx test api",
-    "test:all": "nx run-many --target=test --all",
-    "lint": "nx run-many --target=lint --all",
+    "test:all": "nx run-many --target=test --projects=web,api",
+    "lint": "nx run-many --target=lint --projects=web,api,premium-flow-interface,shared-types",
     "e2e": "nx e2e web-e2e",
     "graph": "nx graph",
     "affected:build": "nx affected --target=build",
@@ -28,6 +28,7 @@
     "release": "release-it"
   },
   "dependencies": {
+    "@angular-surveys/premium-flow-interface": "file:libs/premium-flow-interface",
     "@angular/animations": "21.0.4",
     "@angular/cdk": "21.0.3",
     "@angular/common": "21.0.4",
@@ -73,7 +74,7 @@
     "@angular-eslint/builder": "21.1.0",
     "@angular-eslint/schematics": "21.1.0",
     "@angular/build": "^21.0.3",
-    "@angular/cli": "21.0.3",
+    "@angular/cli": "^21.0.5",
     "@angular/compiler-cli": "21.0.4",
     "@eslint/js": "^9.39.1",
     "@nestjs/schematics": "^11.0.9",
